--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@ body, #gatsby-focus-wrapper {
   align-items: center;
   grid-template-columns: 1fr;
   width: 80%;
+  margin: 0;
 }
 
 @media only screen and (min-width: 768px) {
